fix indicator spacing

--- a/src/scripts/components/carousel/carousel.scss
+++ b/src/scripts/components/carousel/carousel.scss
@@ -119,7 +119,7 @@
             left: 0;
             margin-right: 10%;
             margin-left: 10%;
-            @include mb(xxxl);
+            @include mb(xxl);
             @include z-index(sm);
 
             .indicator {
@@ -138,7 +138,7 @@
                 }
 
                 &[aria-selected="true"] {
-                    @include b-b($size: xxs, $color: light, $variant: light);
+                    @include b-b($size: xxs, $color: light, $variant: lighter);
                     @include transition();
                 }
             }
